log/build_2025-11-19_17-20-50/mcap_streamer/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.15 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.7 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.7 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.7 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found rosbag2_cpp: 0.15.15 (/opt/ros/humble/share/rosbag2_cpp/cmake)
-- Found ament_lint_auto: 0.12.14 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: $<BUILD_INTERFACE:/home/linjiawei/load_mcap/src/mcap_streamer/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the docstring style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/linjiawei/load_mcap/build/mcap_streamer
Consolidate compiler generated dependencies of target s3_downloader_lib
Consolidate compiler generated dependencies of target mcap_reader_node
[ 33%] Built target s3_downloader_lib
[ 50%] Building CXX object CMakeFiles/mcap_reader_node.dir/src/mcap_reader_node.cpp.o
Consolidate compiler generated dependencies of target mcap_streamer_node
[ 83%] Built target mcap_streamer_node
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp: In member function ‘std::string McapReaderNode::formatValue(const MessageMember*, const uint8_t*, size_t&, int)’:
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:487:68: error: ‘const rosidl_message_type_support_t’ {aka ‘const struct rosidl_message_type_support_t’} has no member named ‘size_’
  487 |           oss << formatMessage(member->members_, member->members_->size_, data, offset, indent + 2);
      |                                                                    ^~~~~
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:509:64: error: ‘const rosidl_message_type_support_t’ {aka ‘const struct rosidl_message_type_support_t’} has no member named ‘size_’
  509 |       oss << formatMessage(member->members_, member->members_->size_, data, offset, indent + 1);
      |                                                                ^~~~~
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp: In member function ‘std::string McapReaderNode::deserializeMessage(const string&, std::shared_ptr<rclcpp::SerializedMessage>)’:
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:606:82: error: no matching function for call to ‘get_message_type_support_handle(const string&, const char [37])’
  606 |       auto type_support = rosidl_typesupport_cpp::get_message_type_support_handle(
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  607 |         topic_type, "rosidl_typesupport_introspection_cpp");
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                       
In file included from /opt/ros/humble/include/builtin_interfaces/builtin_interfaces/msg/detail/duration__type_support.hpp:12,
                 from /opt/ros/humble/include/builtin_interfaces/builtin_interfaces/msg/duration.hpp:10,
                 from /opt/ros/humble/include/rclcpp/rclcpp/duration.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/qos.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/node_interfaces/node_graph_interface.hpp:32,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:42,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:1:
/opt/ros/humble/include/rosidl_runtime_cpp/rosidl_typesupport_cpp/message_type_support.hpp:25:39: note: candidate: ‘template<class T> const rosidl_message_type_support_t* rosidl_typesupport_cpp::get_message_type_support_handle()’
   25 | const rosidl_message_type_support_t * get_message_type_support_handle();
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/humble/include/rosidl_runtime_cpp/rosidl_typesupport_cpp/message_type_support.hpp:25:39: note:   template argument deduction/substitution failed:
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:606:82: note:   candidate expects 0 arguments, 2 provided
  606 |       auto type_support = rosidl_typesupport_cpp::get_message_type_support_handle(
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  607 |         topic_type, "rosidl_typesupport_introspection_cpp");
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                       
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:612:79: error: no matching function for call to ‘get_message_type_support_handle(const string&, const char [23])’
  612 |         type_support = rosidl_typesupport_cpp::get_message_type_support_handle(
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  613 |           topic_type, "rosidl_typesupport_cpp");
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                
In file included from /opt/ros/humble/include/builtin_interfaces/builtin_interfaces/msg/detail/duration__type_support.hpp:12,
                 from /opt/ros/humble/include/builtin_interfaces/builtin_interfaces/msg/duration.hpp:10,
                 from /opt/ros/humble/include/rclcpp/rclcpp/duration.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/qos.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/node_interfaces/node_graph_interface.hpp:32,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:42,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:1:
/opt/ros/humble/include/rosidl_runtime_cpp/rosidl_typesupport_cpp/message_type_support.hpp:25:39: note: candidate: ‘template<class T> const rosidl_message_type_support_t* rosidl_typesupport_cpp::get_message_type_support_handle()’
   25 | const rosidl_message_type_support_t * get_message_type_support_handle();
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/humble/include/rosidl_runtime_cpp/rosidl_typesupport_cpp/message_type_support.hpp:25:39: note:   template argument deduction/substitution failed:
/home/linjiawei/load_mcap/src/mcap_streamer/src/mcap_reader_node.cpp:612:79: note:   candidate expects 0 arguments, 2 provided
  612 |         type_support = rosidl_typesupport_cpp::get_message_type_support_handle(
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  613 |           topic_type, "rosidl_typesupport_cpp");
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                                
gmake[2]: *** [CMakeFiles/mcap_reader_node.dir/build.make:76: CMakeFiles/mcap_reader_node.dir/src/mcap_reader_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:193: CMakeFiles/mcap_reader_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
